--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,17 @@ body {
   display: none;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: var(--font-primary);
 }
 
-p, span {
+p,
+span {
   font-family: var(--font-secondary);
 }
+
+/* Background */
